Initial changes to the benchmark suite (#1)
 Add java-based benchmarks runner

Supports basic cli options, including splitting workload on multiple machines

* Readme, new group id and version
* Disable benchmarks for preview features
* Make resources available from within the jar

Previously the benchmarks could only use resources from a filesystem path.


Signed-off-by: Krzysztof Skrzypczynski <krzysztof.skrzypczynski@chainguard.dev>

---------

Signed-off-by: Krzysztof Skrzypczynski <krzysztof.skrzypczynski@chainguard.dev>